# client-cpp

./: .gitignore  CMakeList.txt.bak  CMakeLists.txt  README.md
examples/: example.cpp
examples/example_ws_server/: go.mod  ws_server.go
src/: Makefile  polygonio.cpp  polygonio.h
src/rest/: client.h
src/websocket/: client.cpp  client.h  client.hpp  config.cpp  config.hpp
src/websocket/models/: models.cpp  models.h
